--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -141,7 +141,7 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
 
 % Used in conjunction with {earg}, this handles the numbering and
 % references to example sentences:
-\newcounter{Example}[chapter]
+\newcounter{Example}% [chapter] continuous numbering
 \newcommand*{\ex}[1]{\refstepcounter{Example}\arabic{Example}.\label{#1}}
 % Used in specifying partial models, this keeps the lines justified so
 % so that the = signs all line up. For example:
